--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </nav>
 
         <div class="row mt-5">
-            <div class="col-8 mt-5">
+            <div class="col-8">
                 <h2>Hello! I am Richard Hendrick</h2>
                 <p>An important consideration when using the Web Components spec today is browser support. The pieces of the API we used in this article are fully supported in Chrome, Opera, and Safari. Firefox has experimental support that can be enabled with flags, with full support slated for this year. The Edge team is actively working on providing their own implementation.
                 You can view a more thorough summary of current browser support for each technological piece of the Web Components spec here at caniuse.com.</p>
             </div>
-            <di class="col-4 mt-5">
+            <di class="col-4">
                 <img src="http://scf.usc.edu/~rorehek/itp104/assignment6/img/richard.png" alt="avatar" class="rounded-circle">
             </div>
         </div>
